Improvements on Swagger and OpenAPI, improvements on test, checking password on auth
