# src/controller/AdminController.ts
@@ -1,13 +1,27 @@
 import StatusCodes from 'http-status-codes';
-import {Body, Delete, Get, Path, Post, Put, Route, Security, Tags, Request} from "tsoa";
+import {
+    Body,
+    Delete,
+    Get,
+    Path,
+    Post,
+    Put,
+    Route,
+    Security,
+    Tags,
+    Request,
+    Response,
+    SuccessResponse
+} from "tsoa";
 import {UserCreateDTO, UserDTO} from "../dto/UserDTO";
-import {ErrorHandler} from "../middleware/ErrorMiddleware";
+import {ErrorHandler, IErrorHandler} from "../middleware/ErrorMiddleware";
 import {User, UserTypes} from "../entity/User";
 import {plainToClass} from "class-transformer";
 import {validate} from "class-validator";
-import {hashPassword, printValidationError} from "../shared/functions";
+import {printValidationError} from "../shared/functions";
 import {createTypedUser, getUserDTO} from "./UserController";
 import {getUserById, updateUser} from "../dao/UserDAO";
+import {hashPassword} from "../shared/auth";
 
 const { BAD_REQUEST, NOT_FOUND, UNAUTHORIZED } = StatusCodes;
 
@@ -20,6 +34,8 @@ export default class AdminController {
      * @param id
      */
     @Get('/:id')
+    @Response<IErrorHandler>('404', 'Not Found')
+    @Response<IErrorHandler>('400', 'Bad id')
     public async getAdmin(@Path() id: number): Promise<UserDTO> {
         if (isNaN(id)) {
             throw new ErrorHandler(BAD_REQUEST, 'User id must be an int')
@@ -35,11 +51,13 @@ export default class AdminController {
 
 
     /**
-     *  Register a new administrator
+     * Register a new administrator
      * @todo Enforce admin only
      * @param body {UserCreateDTO} Body of the user to be created as admin
      */
-    @Post('/')
+    @Post('/register')
+    @SuccessResponse("201", "Created")
+    @Response<IErrorHandler>('400', 'Invalid data')
     public async registerAdmin(@Body() body: UserCreateDTO): Promise<UserDTO> {
         const user: UserCreateDTO = plainToClass(UserCreateDTO, body)
         try {
@@ -58,10 +76,12 @@ export default class AdminController {
 
     /**
      * Excludes admin from system
+     * Authenticated Endpoint: Admins
      * @param id {int} user id to exclude
      */
     @Security('jwt', ['Admin'])
     @Delete('/:id')
+    @Response<IErrorHandler>('404', 'Not Found')
     public async deleteAdmin(@Path() id: number): Promise<boolean> {
         const user = await getUserById(id)
         if (!user) {
@@ -75,12 +95,15 @@ export default class AdminController {
 
     /**
      * Updates information for an admin
+     * Authenticated Endpoint: Admins
      * @param id {int} user id to update
      * @param body {UserDTO} user data to be updated
      * @param requestUser {User} User that made the request
      */
     @Security('jwt', ['Admin'])
     @Put('/:id')
+    @Response<IErrorHandler>('400', 'Invalid data')
+    @Response<IErrorHandler>('404', 'Not Found')
     public async updateAdmin(@Path() id: number, @Body() body: UserDTO, @Request() requestUser: User): Promise<UserDTO> {
         if (requestUser.id !== id) {
             throw new ErrorHandler(UNAUTHORIZED, 'Admin can only edit itself')
