# src/controller/AuthController.ts
@@ -1,20 +1,21 @@
 import StatusCodes from 'http-status-codes';
-import {Body, Post, Route, Tags} from "tsoa";
+import {Body, Post, Response, Route, Tags} from "tsoa";
 import {plainToClass} from "class-transformer";
 import {validate} from "class-validator";
-import {ErrorHandler} from "../middleware/ErrorMiddleware";
+import {ErrorHandler, IErrorHandler} from "../middleware/ErrorMiddleware";
 import {printValidationError} from "../shared/functions";
 import {AuthDTO, AuthRequestDTO} from "../dto/AuthDTO";
 import {getUserByEmail} from "../dao/UserDAO";
 import {User} from "../entity/User";
-import {generateAccessToken} from "../shared/auth";
+import {comparePassword, generateAccessToken, hashPassword} from "../shared/auth";
 
-const { BAD_REQUEST, NOT_FOUND } = StatusCodes;
+const { BAD_REQUEST, UNAUTHORIZED} = StatusCodes;
 
 @Route('auth')
 @Tags('Auth')
 export default class AuthController {
     @Post('/')
+    @Response<IErrorHandler>('400', 'Invalid data')
     public async authenticate(@Body() body: AuthRequestDTO): Promise<AuthDTO> {
         const auth: AuthRequestDTO = plainToClass(AuthRequestDTO, body)
 
@@ -29,7 +30,13 @@ export default class AuthController {
 
         const user: User = await getUserByEmail(auth.email)
         if (!user) {
-            throw new ErrorHandler(NOT_FOUND, 'User was not found')
+            throw new ErrorHandler(UNAUTHORIZED, 'Could not authenticate with credentials')
+        }
+
+        const success = comparePassword(auth.password, user.password)
+
+        if (!success) {
+            throw new ErrorHandler(UNAUTHORIZED, 'Could not authenticate with credentials')
         }
 
         return {token: generateAccessToken(user.email, user.type)}
